[package]
name = "wgpu_raymarching"
authors = ["wesfly <https://github.com/wesfly>"]
edition = "2024"

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "24.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }

[[bin]]
name = "wgpu_raymarching"
path = "src/main.rs"
