[package]
name = "wgpu_raymarching"
authors = ["wesfly <https://github.com/wesfly>"]
edition = "2024"

[dependencies]
cfg-if = "1"
winit = { version = "0.29" }
env_logger = "0.11.8"
log = "0.4"
wgpu = "25.0"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }

[[bin]]
name = "wgpu_raymarching"
path = "src/main.rs"
