[package]
name = "wgpu_raymarching"
authors = ["wesfly <https://github.com/wesfly>"]
edition = "2024"

[dependencies]
winit = { version = "0.30.9", features = ["rwh_05"] }
env_logger = "0.11.8"
log = "0.4"
wgpu = "26.0"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }

[[bin]]
name = "wgpu_raymarching"
path = "src/main.rs"
